# vic3

./: .gitignore  .pylintrc  debt_to_gdp.py  decay_calculator.py  model_training.ipynb  pyproject.toml  vic3.csv  vic3.ipynb
